<package>
  <name>cart_traj_interp</name>
  <version>1.0.0</version>
  <description>This package contains the components of the cart_traj_interp package</description>
  <maintainer email="jimmy.dasilva@isir.upmc.fr">Jimmy Da Silva</maintainer>

  <license>CeCILL</license>

  <author>Jimmy Da Silva</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_rosparam</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_ros_kdl_tools</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>moveit_msgs</build_depend>


  <run_depend>rtt_ros_kdl_tools</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <build_depend>rtt_moveit_msgs</build_depend>
  <run_depend>rtt_moveit_msgs</run_depend>
  
  <export>
    <rtt_ros>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_diagnostic_msgs</plugin_depend>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
      <plugin_depend>kdl_typekit</plugin_depend>
      <plugin_depend>eigen_typekit</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_tf</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
      <plugin_depend>rtt_nav_msgs</plugin_depend>
      <plugin_depend>rtt_moveit_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
